--- a/index/index.html
+++ b/index/index.html
@@ -69,8 +69,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">河堤上的傻瓜</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=riverfoolhouse&ROOM_ID=MYC21015101" title="河堤上的傻瓜" target="_blank">
+                    <img src="./im1.jpg" alt="河堤上的傻瓜">
+                </a></li>
             </ul>
-            <img src="./im1.jpg" alt="河堤上的傻瓜">
         </div>
 
         <div class="bnb">
@@ -86,8 +88,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">峇里散散步</a></li>
-            </ul>
-            <img src="./im2.png" alt="峇里散散步"> 
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=balibnb" title="峇里散散步" target="_blank">
+                    <img src="./im2.png" alt="峇里散散步">
+                </a></li>
+            </ul> 
         </div>
 
         <div class="bnb">
@@ -100,8 +104,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">有間民宿</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=ahomeinn" title="有間民宿" target="_blank">
+                    <img src="./im3.jpg" alt="有間民宿">
+                </a></li>
             </ul>
-            <img src="./im3.jpg" alt="有間民宿">
         </div>
 
         <div class="bnb">
@@ -113,8 +119,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">心想事成</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=iwanttodo" title="心想事成" target="_blank">
+                    <img src="./im4.jpg" alt="心想事成">
+                </a></li>
             </ul>
-            <img src="./im4.jpg" alt="心想事成">
         </div>
 
         <div class="bnb">
@@ -128,8 +136,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">沐晨</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=muchen" title="沐晨" target="_blank">
+                    <img src="./im5.jpg" alt="沐晨">
+                </a></li>
             </ul>
-            <img src="./im5.jpg" alt="沐晨">
         </div>
 
         <div class="bnb">
@@ -141,8 +151,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">輕輕旅行</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=travelbnb&ROOM_ID=MYC17024706" title="輕輕旅行" target="_blank">
+                    <img src="./im6.jpg" alt="輕輕旅行">
+                </a></li>
             </ul>
-            <img src="./im6.jpg" alt="輕輕旅行">
         </div>
 
         <div class="bnb">
@@ -156,8 +168,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">墾丁龍水灣</a></li>
+                <li><a href="https://twstay.com/RWD/roomsList.aspx?BNB=lsw" title="墾丁龍水灣" target="_blank">
+                    <img src="./im7.jpg" alt="墾丁龍水灣">
+                </a></li>
             </ul>
-            <img src="./im7.jpg" alt="墾丁龍水灣">
         </div>
 
         <div class="bnb">
@@ -170,8 +184,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">辰居</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chenhome" title="辰居" target="_blank">
+                    <img src="./im8.jpg" alt="辰居">
+                </a></li>
             </ul>
-            <img src="./im8.jpg" alt="辰居">
         </div>
 
         <div class="bnb">
@@ -183,8 +199,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">春苑</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=chunyuan3" title="春苑" target="_blank">
+                    <img src="./im9.jpg" alt="春苑">
+                </a></li>
             </ul>
-            <img src="./im9.jpg" alt="春苑">
         </div>
 
         <div class="bnb">
@@ -196,8 +214,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">JU海遇民宿</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=windtown&ROOM_ID=MYC15047803" title="JU海遇民宿" target="_blank">
+                    <img src="./im10.jpg" alt="JU海遇民宿">
+                </a></li>
             </ul>
-            <img src="./im10.jpg" alt="JU海遇民宿">
         </div>
 
         <div class="bnb">
@@ -212,8 +232,11 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">橘色旅店</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=orange" title="橘色旅店" target="_blank">
+                    <img src="./im11.jpg" alt="橘色旅店">
+                </a></li>
             </ul>
-            <img src="./im11.jpg" alt="橘色旅店">
+
         </div>
 
         <div class="bnb">
@@ -227,8 +250,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">慢遊墾丁</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=slowlyInn" title="慢遊墾丁" target="_blank">
+                    <img src="./im12.jpg" alt="慢遊墾丁">
+                </a></li>
             </ul>
-            <img src="./im12.jpg" alt="慢遊墾丁">
         </div>
 
         <div class="bnb">
@@ -241,8 +266,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">靚岩</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=jingyanseascape" title="靚岩" target="_blank">
+                    <img src="./im13.jpg" alt="靚岩">
+                </a></li>
             </ul>
-            <img src="./im13.jpg" alt="靚岩">
         </div>
 
         <div class="bnb">
@@ -254,8 +281,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">戀南灣</a></li>
+                <li><a href="https://twstay.com/RWD2/rooms.aspx?BNB=lnw&ROOM_ID=MYC15053901" title="戀南灣" target="_blank">
+                    <img src="./im14.jpg" alt="戀南灣">
+                </a></li>
             </ul>
-            <img src="./im14.jpg" alt="戀南灣">
         </div>
 
         <div class="bnb">
@@ -267,8 +296,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">樂雅居</a></li>
+                <li><a href="https://twstay.com/RWD/rooms.aspx?BNB=dennissi&ROOM_ID=MYC15057905" title="樂雅居" target="_blank">
+                    <img src="./im15.jpg" alt="樂雅居">
+                </a></li>
             </ul>
-            <img src="./im15.jpg" alt="樂雅居">
         </div>
 
         <div class="bnb">
@@ -280,8 +311,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">南境之美</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=south555" title="南境之美" target="_blank">
+                    <img src="./im16.jpg" alt="南境之美">
+                </a></li>
             </ul>
-            <img src="./im16.jpg" alt="南境之美">
         </div>
 
         <div class="bnb">
@@ -295,8 +328,10 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">去旅行</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=gotravelhotel" title="去旅行" target="_blank">
+                    <img src="./im17.jpg" alt="去旅行">
+                </a></li>
             </ul>
-            <img src="./im17.jpg" alt="去旅行">
         </div>
 
         <div class="bnb">
@@ -311,12 +346,16 @@
             <p>網址 :</p>
             <ul>
                 <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">北歐風情</a></li>
+                <li><a href="https://twstay.com/RWD2/roomList.aspx?BNB=pretty1178" title="北歐風情" target="_blank">
+                    <img src="./im18.jpg" alt="北歐風情">
+                </a></li>
             </ul>
-            <img src="./im18.jpg" alt="北歐風情">
         </div>
     </div>
+
     <footer>
-        <p style="text-align: center; font-size: 0.9em; margin-top: 20px;">&copy; Taiwan Stay Network</p>
+        <p style="text-align: center; font-size: 0.9em; margin-top: 20px;">&copy;Copy Right Taiwan Stay Network</p>
     </footer>
+
 </body>
 </html>
